fix swagger - add auth
